# locke

./: CSS-MOTION-README.md  README.md  SUBSTRATE-GUIDE.md  next.config.js  package-lock.json  package.json  start-node.sh  start-substrate-node.sh  substrate-login-guide.md  tailwind.config.js  vercel.json
docs/: README.md
docs/api/: did-pallet.md  substrate-client.md
docs/guides/: development-setup.md  faq.md  glossary.md  installation.md  integration.md  user-guide.md
src/app/: cyberstyles.css  globals.css  layout.tsx  metadata.ts  page.tsx
src/app/api/login/: route.ts
src/app/api/prove/: route.ts
src/app/api/verify/: route.ts
src/app/docs/: page.tsx
src/app/docs/substrate-login/: page.tsx
src/app/examples/wasm-zkp/: page.tsx
src/app/login/: page.tsx
src/app/motion-demo/: page.tsx
src/app/multi-chain/: page.tsx
src/app/verify/: layout.tsx  page.tsx
src/components/: CredentialDisplay.tsx  CredentialVerify.tsx  Footer.tsx  Header.tsx  Login.tsx  MobileWalletConnect.tsx  MultiChainIdentity.tsx  ProofGenerator.tsx  WalletLogin.tsx  layout-wrapper.tsx  page-transition.tsx
src/components/ui/: advanced-motion.tsx  button.tsx  card.tsx  input.tsx  loading-spinner.tsx  motion-component.tsx  page-title.tsx  spinner.tsx  use-toast.tsx
src/lib/: advanced-zkp.ts  credential-types.ts  fonts.ts  identity-providers.ts  substrate-client.ts  utils.ts  walletconnect-utils.ts  ws-fallback.js
src/lib/hooks/: use-auth.tsx
src/lib/multi-chain/: chain-registry.ts  did-resolver.ts  ethereum-client.ts  identity-manager.ts  index.ts  types.ts  use-multi-chain.ts
src/lib/wasm-zkp/: index.ts
substrate/pallet-did/: Cargo.toml  lib.rs
substrate/pallet-did/src/: lib.rs
substrate/pallet-sbt/: Cargo.toml  lib.rs
substrate/pallet-sbt/src/: lib.rs
substrate/runtime/: Cargo.toml  lib.rs
substrate/runtime/src/: lib.rs
wasm-zkp/: Cargo.toml  README.md  build.sh
wasm-zkp/src/: lib.rs  utils.rs
wasm-zkp/src/crypto/: credential.rs  did_resolver.rs  mod.rs  zk_proofs.rs
wasm-zkp/src/multi_chain/: linker.rs  mod.rs  resolver.rs
zkid-login/: .gitignore  package-lock.json  package.json
zkid-login/src/app/login/: page.tsx
zkid-login/src/components/: CredentialDisplay.tsx  ProofGenerator.tsx  WalletLogin.tsx
