[package]
name = "wasm-zkp"
version = "0.1.0"
edition = "2021"
authors = ["zkID Team"]
description = "WebAssembly module for Zero-Knowledge Proofs in zkID Login"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
bellman = "0.13.1"
ff = "0.12.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
bls12_381 = "0.7.0"
pairing = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true 