[package]
name = "wasm-zkp"
version = "0.1.0"
edition = "2021"
authors = ["zkID Team"]
description = "WebAssembly module for Zero-Knowledge Proofs in zkID Login"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
bellman = "0.13.1"
ff = "0.12.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
bls12_381 = "0.7.0"
pairing = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"
base64 = "0.13"
sha2 = "0.10"
hex = "0.4"
blake2 = "0.10"
blake3 = "1.3"
log = "0.4"
# New dependencies for multi-chain support
futures = "0.3"
thiserror = "1.0"
derive_more = "0.99"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1 